// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddedBy when addedBy information provided and it is the first play displays a current user icon with a popup message 1`] = `
<Popup
  content={
    <List
      className="added-by-list"
    >
      <ListItem>
        <Image
          as="img"
          avatar={true}
          className="added_by_avatar_image"
          src="link/to/image"
          ui={true}
        />
        <ListContent>
          <ListDescription>
            <strong>
              17 Dec 2019 @ 1:11 pm
            </strong>
             - 
            Big Rainbowhead
          </ListDescription>
        </ListContent>
      </ListItem>
    </List>
  }
  disabled={false}
  eventsEnabled={true}
  on={
    Array [
      "click",
      "hover",
    ]
  }
  pinned={false}
  popperModifiers={Array []}
  position="top left"
  trigger={
    <Image
      as="img"
      avatar={true}
      className="added_by_avatar_image"
      src="link/to/image"
      ui={true}
    />
  }
  wide={true}
/>
`;

exports[`AddedBy when addedBy information provided and there is play history displays a current user icon with a popup message containing previous  1`] = `
<Popup
  content={
    <List
      className="added-by-list"
    >
      <ListItem>
        <Image
          as="img"
          avatar={true}
          className="added_by_avatar_image"
          src="link/to/image"
          ui={true}
        />
        <ListContent>
          <ListDescription>
            <strong>
              17 Dec 2019 @ 1:11 pm
            </strong>
             - 
            Big Rainbowhead
          </ListDescription>
        </ListContent>
      </ListItem>
      <ListItem>
        <Icon
          as="i"
          name="user"
        />
        <ListContent>
          <ListDescription>
            <strong>
              17 Dec 2019 @ 1:11 pm
            </strong>
             - 
            Big Rainbowhead2
          </ListDescription>
        </ListContent>
      </ListItem>
      <ListItem>
        <Icon
          as="i"
          name="user"
        />
        <ListContent>
          <ListDescription>
            <strong>
              17 Dec 2019 @ 1:11 pm
            </strong>
             - 
            User unknown
          </ListDescription>
        </ListContent>
      </ListItem>
    </List>
  }
  disabled={false}
  eventsEnabled={true}
  on={
    Array [
      "click",
      "hover",
    ]
  }
  pinned={false}
  popperModifiers={Array []}
  position="top left"
  trigger={
    <Image
      as="img"
      avatar={true}
      className="added_by_avatar_image"
      src="link/to/image"
      ui={true}
    />
  }
  wide={true}
/>
`;

exports[`AddedBy when no addedBy information provided displays a spotify icon 1`] = `
<Icon
  as="i"
  name="user"
/>
`;
